--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,6 +138,9 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:11.0.2'
     compile 'com.firebaseui:firebase-ui:0.6.0'
 
+    compile 'com.google.android.gms:play-services-auth:11.0.2'
+
+
     //bubble head tag
     compile 'com.github.mabbas007:TagsEditText:1.0.5'
 
