adding dependencies to the template

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
 
+        classpath 'com.google.gms:google-services:3.0.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
@@ -36,6 +38,7 @@ allprojects {
         jcenter()
 
         maven { url "https://jitpack.io" }
+        maven { url 'https://github.com/leonardocardoso/mvn-repo/raw/master/maven-deploy' }
     }
 }
 
