--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,11 +59,11 @@ android {
     buildToolsVersion '26.0.2'
 }
 
-repositories {
-    jcenter()
-    // maven { url 'https://maven.fabric.io/public' }
 
-    maven { url "https://jitpack.io" }
+repositories {
+    maven { url 'https://jitpack.io' }
+    maven {  url "https://maven.google.com" }
+    //maven { url 'https://maven.fabric.io/public' }
 }
 
 dependencies {
@@ -83,11 +83,11 @@ dependencies {
 
     // =================== Google play services ===================
     // https://developers.google.com/android/guides/setup
-    compile "com.google.android.gms:play-services-location:$gsmVersion"
-    compile "com.google.android.gms:play-services-maps:$gsmVersion"
+   // compile "com.google.android.gms:play-services-location:$gsmVersion"
+   // compile "com.google.android.gms:play-services-maps:$gsmVersion"
     // https://github.com/excilys/androidannotations
-    apt "org.androidannotations:androidannotations:$annotationsVersion"
-    compile "org.androidannotations:androidannotations-api:$annotationsVersion"
+  //  apt "org.androidannotations:androidannotations:$annotationsVersion"
+  //  compile "org.androidannotations:androidannotations-api:$annotationsVersion"
 
     // =================== UI ===================
     // https://github.com/chrisjenx/Calligraphy
@@ -136,6 +136,109 @@ dependencies {
     // =================== UI ===================
     compile 'com.github.sd6352051.niftydialogeffects:niftydialogeffects:1.0.0@aar'
     compile 'com.github.johnkil.android-appmsg:appmsg:1.2.0'
+
+
+    //multiple images
+    compile 'com.github.stfalcon:multiimageview:0.1'
+
+//for country code
+    compile 'com.hbb20:ccp:2.0.2'
+
+    //qr cde reader
+    compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.2'
+
+    //qr code generator
+    compile 'com.github.kenglxn.QRGen:android:2.3.0'
+
+    //androdi stuff
+    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:design:26.0.0-alpha1'
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
+    compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:support-annotations:26.0.0-alpha1'
+
+    //emotion detection
+    compile 'com.microsoft.projectoxford:emotion:1.0.355'
+    compile 'com.microsoft.projectoxford:face:1.0.0'
+
+    //google android
+    compile 'com.google.android.gms:play-services-auth:11.0.2'
+    compile 'com.google.android.gms:play-services-analytics:11.0.2'
+    compile 'com.google.android.gms:play-services-identity:11.0.2'
+    compile 'com.google.android.gms:play-services-gcm:11.0.2'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
+    compile 'com.google.android.gms:play-services-location:11.0.2'
+
+    //gson
+    compile 'com.google.code.gson:gson:2.7'
+
+    //circle image view
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    //camera kit, most probably unused
+    //compile 'com.wonderkiln:camerakit:0.9.17'
+
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
+
+    //firebase stuff
+    compile 'com.google.firebase:firebase-database:11.0.2'
+    compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.google.firebase:firebase-storage:11.0.2'
+    compile 'com.google.firebase:firebase-messaging:11.0.2'
+    compile 'com.google.firebase:firebase-config:11.0.2'
+    compile 'com.google.firebase:firebase-ads:11.0.2'
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.firebase:firebase-crash:11.0.2'
+    compile 'com.firebaseui:firebase-ui:0.6.0'
+
+    //bubble head tag
+    compile 'com.github.mabbas007:TagsEditText:1.0.5'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.mindorks:paracamera:0.2.2'
+    compile 'com.wang.avi:library:2.1.3'
+    testCompile 'junit:junit:4.12'
+
+    //link preview
+    compile 'org.jsoup:jsoup:1.8.3' // required
+    compile 'com.leocardz:link-preview:2.0.0@aar'
+
+    //image importer and camera importer
+    //https://github.com/finn-no/capturandro
+    compile('no.finntech:capturandro:0.0.26@aar')
+
+    //image comprasor  https://github.com/zetbaitsu/Compressor
+    compile 'id.zelory:compressor:2.1.0'
+
+    //audio libraru
+
+
+//test
+    // androidTestCompile 'com.android.support.test.espresso:espresso-intents:3.+'
+    //androidTestCompile 'com.android.support:support-annotations:26.0.0-alpha1'
+
+    //butter knife
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    //permission checker
+    compile 'com.karumi:dexter:4.1.0'
+
+    //expandlabe views
+    compile 'com.github.aakira:expandable-layout:1.6.0@aar'
+
+    //camera kit
+    //compile 'com.wonderkiln:camerakit:0.9.17'
+    compile 'com.wonderkiln:camerakit:0.11.1'
+
+    //background animation for emoji
+    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    // sectioned header
+    compile 'com.afollestad:sectioned-recyclerview:0.5.0'
 }
 
 apt {
@@ -151,3 +254,4 @@ apt {
         library true
     }
 }
+apply plugin: 'com.google.gms.google-services'
