--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,11 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     // Config
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+//    compileSdkVersion rootProject.ext.compileSdkVersion
+//    buildToolsVersion rootProject.ext.buildToolsVersion
+
+    compileSdkVersion 26
+    buildToolsVersion "26.0.0"
 
     // Config
     dexOptions {
@@ -14,11 +17,17 @@ android {
     }
 
     defaultConfig {
+        applicationId "us.sayederfanarefin"
+        versionCode 1
+        versionName "1.0"
+        minSdkVersion 19
+        targetSdkVersion 26
+
         // Config
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode "${versionMajor}".toInteger() * 1000 + "${versionMinor}".toInteger() * 100 + "${versionPatch}".toInteger() * 10 + "${versionBuild}".toInteger();
-        versionName "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}-${versionTag}"
+      //  minSdkVersion rootProject.ext.minSdkVersion
+      //  targetSdkVersion rootProject.ext.targetSdkVersion
+       // versionCode "${versionMajor}".toInteger() * 1000 + "${versionMinor}".toInteger() * 100 + "${versionPatch}".toInteger() * 10 + "${versionBuild}".toInteger();
+       // versionName "${versionMajor}.${versionMinor}.${versionPatch}.${versionBuild}-${versionTag}"
 
         // Config
         multiDexEnabled = true
