--- a/build.gradle
+++ b/build.gradle
@@ -44,17 +44,17 @@ allprojects {
 
 // CONFIG
 project.ext {
-    compileSdkVersion = 25
-    buildToolsVersion = "25.0.2"
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.0"
     minSdkVersion = 19
-    targetSdkVersion = 25
+    targetSdkVersion = 26
 
-    supportVersion = "25.2.0"
+    supportVersion = "26.0.0-alpha1" //26.0.0-alpha1'
     multiDexVersion = "1.0.1"
     annotationsVersion = "4.1.0"
     iconifyVersion = "2.2.2"
     glideVersion = "3.6.1"
-    gsmVersion = "11.8.0"
+    gsmVersion = "11.0.2" //"11.8.0"
     eventbusVersion = "3.0.0"
     stethoVersion = "1.3.0"
     fastAndroidNetworking = "0.2.0"
